refactor repo to new standard

--- a/ruff.toml
+++ b/ruff.toml
@@ -1,6 +1,36 @@
 line-length = 88
 indent-width = 4
-target-version = "py313"
+target-version = "py312"
+
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
+    "tests",
+]
 
 [lint]
 select = [
@@ -68,7 +98,7 @@ ignore = [
     "ERA001",
     "RUF012",
     "E402",
-    "C901",
+    "ANN401",
 ]
 
 [format]
