--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,30 @@
-[build-system]
-requires = ["setuptools>=80.0"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "my-torch-utils"
 version = "0.1.0"
-description = "My personal PyTorch utilities for RL projects."
+description = "My personal PyTorch utilities."
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 license = { text = "MIT" }
 authors = [
     { name = "Davide Tenedini", email = "davide.tenedini@polimi.it" },
 ]
-
 dependencies = [
-    "matplotlib>=3.10.7",
-    "numpy>=2.3.4",
-    "torch>=2.9.0",
+    "matplotlib>=3.10.8",
+    "matplotlib-stubs>=0.3.11",
+    "numpy>=2.4.0",
+    "torch>=2.9.1",
 ]
 
-[tool.setuptools]
-package-dir = {"" = "src"}
-packages = { find = { where = ["src"] } }
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/my_torch_utils"]
 
 [dependency-groups]
 dev = [
-    "mypy>=1.18.2",
-    "ruff>=0.14.2",
+    "pyrefly>=0.46.0",
+    "pytest>=9.0.2",
+    "ruff>=0.14.10",
 ]
