--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "my-torch-utils"
+name = "torch-research-utils"
 version = "0.1.0"
-description = "My personal PyTorch utilities."
+description = "PyTorch research utilities."
 readme = "README.md"
 requires-python = ">=3.12"
 license = { text = "MIT" }
@@ -20,7 +20,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/my_torch_utils"]
+packages = ["src/torch_research_utils"]
 
 [dependency-groups]
 dev = [
